flow_screen_components/workGuide/force-app/main/default/objects/AppProcessInstance__c/AppProcessInstance__c.object-meta.xml
<CustomObject>
    <label>App Process Instance</label>
    <nameField>
        <label>AppProcessInstance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Process Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>