flow_screen_components/workGuide/force-app/main/default/objects/AppProcessInstance__c/fields/App_Process_Definition__c.field-meta.xml
<CustomField>
    <fullName>App_Process_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App Process Definition</label>
    <referenceTo>AppProcessDefinition__c</referenceTo>
    <relationshipLabel>App Process Instances</relationshipLabel>
    <relationshipName>App_Process_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>