flow_screen_components/workGuide/force-app/main/default/objects/AppProcessInstance__c/fields/currentStage__c.field-meta.xml
<CustomField>
    <fullName>currentStage__c</fullName>
    <label>Current Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>