flow_screen_components/workGuide/force-app/main/default/objects/AppProcessInstance__c/fields/currentStep__c.field-meta.xml
<CustomField>
    <fullName>currentStep__c</fullName>
    <label>Current Step</label>
    <length>80</length>
    <type>Text</type>
</CustomField>