flow_screen_components/workGuide/force-app/main/default/objects/AppProcessInstance__c/fields/OrchestrationInstanceId__c.field-meta.xml
<CustomField>
    <fullName>OrchestrationInstanceId__c</fullName>
    <label>OrchestrationInstanceId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>