flow_screen_components/workGuide/force-app/main/default/objects/AppProcessInstance__c/fields/OrchestrationStepInstanceId__c.field-meta.xml
<CustomField>
    <fullName>OrchestrationStepInstanceId__c</fullName>
    <label>OrchestrationStepInstanceId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>