flow_screen_components/workGuide/force-app/main/default/objects/AppProcessInstance__c/fields/orchestrationWorkItemId__c.field-meta.xml
<CustomField>
    <fullName>orchestrationWorkItemId__c</fullName>
    <label>orchestrationWorkItemId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>