flow_screen_components/workGuide/force-app/main/default/objects/AppProcessInstance__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>