flow_screen_components/workGuide/force-app/main/default/objects/AppProcessInstance__c/fields/StageStepMapping__c.field-meta.xml
<CustomField>
    <fullName>StageStepMapping__c</fullName>
    <label>StageStepMapping</label>
    <length>200</length>
    <type>Text</type>
</CustomField>