flow_screen_components/workGuide/force-app/main/default/objects/AppProcessInstance__c/fields/StepFlowMapping__c.field-meta.xml
<CustomField>
    <fullName>StepFlowMapping__c</fullName>
    <label>StepFlowMapping</label>
    <length>200</length>
    <type>Text</type>
</CustomField>